--- a/css/index.css
+++ b/css/index.css
@@ -77,7 +77,8 @@ button {
   margin: 0 auto;
   padding: 0 20px;
 }
-header {
+header,
+.advantages {
   background-color: var(--background-color-darkblue);
 }
 
@@ -294,4 +295,105 @@ header {
   bottom: 0;
   left: 0;
   right: 0;
+}
+
+.advantages {
+  /*Box model stuff*/
+  padding: 140px 0 60px;
+}
+
+.adventages__title {
+  /*Box model stuff*/
+  margin-bottom: 50px;
+  /*Typography stuff*/
+  font-family: var(--inter-semi-bold);
+  font-size: 48px;
+}
+
+.advantages__grid {
+  /*Display stuff*/
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  justify-content: center;
+  /*Miscellaneous*/
+  gap: 30px 30px;
+}
+
+.advantages__item {
+  /*Box model stuff*/
+  width: 300px;
+  padding: 25px;
+  border: 1px solid var(--border-color);
+  border-radius: 10px;
+  /*Miscellaneous*/
+  overflow: hidden;
+}
+
+.advantages__item--size {
+  /*Box model stuff*/
+  width: 630px;
+}
+
+.advantages__item--size img {
+  /*Box model stuff*/
+  width: 100%;
+  height: 100%;
+}
+
+.advantages__item--size:last-child {
+  /*Box model stuff*/
+  padding: 0;
+}
+
+.advantages__icons {
+  /*Box model stuff*/
+  margin-bottom: 75px;
+}
+
+.advantages__item h3 {
+  /*Box model stuff*/
+  margin-bottom: 10px;
+}
+
+.advantages__text {
+  /*Typography stuff*/
+  font-family: var(--inter-medium);
+  font-size: 26px;
+}
+
+.advantages__item__color {
+  /*Display stuff*/
+  display: flex;
+  flex-direction: column;
+  /*Box model stuff*/
+  background: #39a7ff;
+  background: linear-gradient(
+    90deg,
+    rgba(57, 167, 255, 1) 0%,
+    rgba(0, 141, 255, 1) 100%
+  );
+}
+
+.advantages__item__color {
+  /*Typography stuff*/
+  text-transform: uppercase;
+}
+
+.advantages__item__color span:nth-child(1) {
+  /*Box model stuff*/
+  margin-bottom: 15px;
+  /*Typography stuff*/
+  font-size: 20px;
+  /*Miscellaneous*/
+  letter-spacing: 11%;
+}
+.advantages__item__color span:nth-child(2) {
+  /*Typography stuff*/
+  font-family: var(--inter-extra-bold);
+  font-size: 48px;
+}
+.advantages__item__color span:nth-child(3) {
+  /*Typography stuff*/
+  font-size: 48px;
 }
