section partners stylized

--- a/css/index.css
+++ b/css/index.css
@@ -78,7 +78,8 @@ button {
   padding: 0 20px;
 }
 header,
-.advantages {
+.advantages,
+.partners {
   background-color: var(--background-color-darkblue);
 }
 
@@ -302,7 +303,8 @@ header,
   padding: 140px 0 60px;
 }
 
-.adventages__title {
+.adventages__title,
+.partners__title {
   /*Box model stuff*/
   margin-bottom: 50px;
   /*Typography stuff*/
@@ -396,4 +398,31 @@ header,
 .advantages__item__color span:nth-child(3) {
   /*Typography stuff*/
   font-size: 48px;
+}
+
+.partners {
+  /*Box model stuff*/
+  padding-bottom: 88px;
+}
+
+.partners__title {
+  /*Box model stuff*/
+  margin-bottom: 30px;
+}
+
+.partners__logos {
+  /*Display stuff*/
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  /*Box model stuff*/
+  padding: 80px 0;
+  border: 1px solid var(--line-color);
+  border-radius: 10px;
+  background: #26627a;
+  background: linear-gradient(
+    175deg,
+    rgba(38, 98, 122, 1) 0%,
+    rgba(20, 82, 107, 1) 100%
+  );
 }
